--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@
 DATABASE_URL="postgresql://auth_owner:wTmoseq4pV2z@ep-blue-waterfall-a5ngkab7-pooler.us-east-2.aws.neon.tech/auth?sslmode=require"
 # uncomment next line if you use Prisma <5.10
 # DATABASE_URL_UNPOOLED="postgresql://auth_owner:wTmoseq4pV2z@ep-blue-waterfall-a5ngkab7.us-east-2.aws.neon.tech/auth?sslmode=require"
+
+AUTH_SECRET="test"
