added provider logins, google, github, facebook

--- a/.env
+++ b/.env
@@ -9,3 +9,12 @@ DATABASE_URL="postgresql://auth_owner:wTmoseq4pV2z@ep-blue-waterfall-a5ngkab7-po
 # DATABASE_URL_UNPOOLED="postgresql://auth_owner:wTmoseq4pV2z@ep-blue-waterfall-a5ngkab7.us-east-2.aws.neon.tech/auth?sslmode=require"
 
 AUTH_SECRET="test"
+
+GITHUB_CLIENT_ID=Ov23lig0RKOhABbkldw8
+GITHUB_CLIENT_SECRET=a5db2e9bfaffc851ebf6046fae8b5370a5dcce4a
+
+GOOGLE_CLIENT_ID=231888134415-n5c5flcbmls2hldglfbcd0eh1prn5gcs.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+
+FACEBOOK_CLIENT_ID=1101710681532701
+FACEBOOk_CLIENT_SECRET=99c76374838377b0d7759c82c0875070
